# kiwiskil

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: kiwiskil.yml
.indexer/: manifest.json
.indexer/skills/: codebase.md
codeindexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
indexer/: ast_parser.py  cli.py  config.py  git.py  graph.py  grouper.py  hooks.py  js_parser.py  langs.py  llm.py  manifest.py  repair.py  scip.py  ts_extract.py  verify.py  wiki.py
indexer/templates/: index.md.j2  page.md.j2  skill.md.j2
kiwiskil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ast_parser.py  test_config.py  test_graph.py  test_grouper.py  test_init.py  test_langs.py  test_llm_dispatch.py  test_manifest.py  test_multilang.py  test_repair_plan.py  test_scip.py  test_smart_integration.py  test_verify.py  test_wiki.py
tests/fixtures/sample_go/: server.go
tests/fixtures/sample_java/: Widget.java
tests/fixtures/sample_py/: auth.py
tests/fixtures/sample_ruby/: widget.rb
tests/fixtures/sample_rust/: widget.rs
wiki/: INDEX.md  indexer.md  tests.md  tests_fixtures.md
