[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeindexer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "litellm>=1.35",
    "jinja2>=3.1",
    "tomli-w>=1.0",
]

[project.scripts]
indexer = "indexer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
