[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiwiskil"
version = "0.4.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "litellm>=1.35",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "tomli-w>=1.0",
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-rust>=0.23",
]

[project.scripts]
kiwiskil = "indexer.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
indexer = ["templates/*.j2"]
